--- a/tests/game_of_life/Makefile
+++ b/tests/game_of_life/Makefile
@@ -1,5 +1,6 @@
 FLAGS = -O3 -W -Wall -Wextra -pedantic -std=c++0x
-INCLUDES = -I$$HOME/include -L$$HOME/lib -lboost_mpi -lboost_program_options -lboost_serialization -lzoltan
+BOOST_MPI_LIBS = -lboost_serialization -lboost_mpi
+INCLUDES = -I$$HOME/include -L$$HOME/lib -lboost_program_options -lzoltan
 CXX = mpic++ $(FLAGS)
 MPIRUN = mpirun -np 2
 
@@ -49,7 +50,7 @@ HEADERS = \
 all: $(PROGRAMS)
 
 game_of_life_test_all_cells_boost_mpi: game_of_life_test.cpp $(HEADERS) Makefile
-	$(CXX) -DDEBUG game_of_life_test.cpp $(INCLUDES) -o game_of_life_test_all_cells_boost_mpi
+	$(CXX) -DDEBUG game_of_life_test.cpp $(INCLUDES) $(BOOST_MPI_LIBS) -o game_of_life_test_all_cells_boost_mpi
 
 game_of_life_test_all_cells_mpi: game_of_life_test.cpp $(HEADERS) Makefile
 	$(CXX) -DDEBUG -DDCCRG_CELL_DATA_SIZE_FROM_USER game_of_life_test.cpp $(INCLUDES) -o game_of_life_test_all_cells_mpi
@@ -58,7 +59,7 @@ game_of_life_test_all_cells_mpi_datatype: game_of_life_test.cpp $(HEADERS) Makef
 	$(CXX) -DDEBUG -DDCCRG_CELL_DATA_SIZE_FROM_USER -DDCCRG_USER_MPI_DATA_TYPE game_of_life_test.cpp $(INCLUDES) -o game_of_life_test_all_cells_mpi_datatype
 
 game_of_life_test_boost_mpi: game_of_life_test.cpp $(HEADERS) Makefile
-	$(CXX) -DDEBUG -DDCCRG_SEND_SINGLE_CELLS game_of_life_test.cpp $(INCLUDES) -o game_of_life_test_boost_mpi
+	$(CXX) -DDEBUG -DDCCRG_SEND_SINGLE_CELLS game_of_life_test.cpp $(INCLUDES) $(BOOST_MPI_LIBS) -o game_of_life_test_boost_mpi
 
 game_of_life_test_mpi: game_of_life_test.cpp $(HEADERS) Makefile
 	$(CXX) -DDEBUG -DDCCRG_SEND_SINGLE_CELLS -DDCCRG_CELL_DATA_SIZE_FROM_USER game_of_life_test.cpp $(INCLUDES) -o game_of_life_test_mpi
@@ -67,22 +68,22 @@ game_of_life_test_mpi_datatype: game_of_life_test.cpp $(HEADERS) Makefile
 	$(CXX) -DDEBUG -DDCCRG_SEND_SINGLE_CELLS -DDCCRG_CELL_DATA_SIZE_FROM_USER -DDCCRG_USER_MPI_DATA_TYPE game_of_life_test.cpp $(INCLUDES) -o game_of_life_test_mpi_datatype
 
 scalability: scalability.cpp $(HEADERS) Makefile
-	$(CXX) scalability.cpp $(INCLUDES) -o scalability
+	$(CXX) scalability.cpp $(INCLUDES) $(BOOST_MPI_LIBS) -o scalability
 
 scalability3d: scalability3d.cpp $(HEADERS) Makefile
-	$(CXX) scalability3d.cpp $(INCLUDES) -o scalability3d
+	$(CXX) scalability3d.cpp $(INCLUDES) $(BOOST_MPI_LIBS) -o scalability3d
 
 scalability1d: scalability1d.cpp $(HEADERS) Makefile
-	$(CXX) scalability1d.cpp $(INCLUDES) -o scalability1d
+	$(CXX) scalability1d.cpp $(INCLUDES) $(BOOST_MPI_LIBS) -o scalability1d
 
 refined: refined.cpp $(HEADERS) Makefile
-	$(CXX) -DDEBUG refined.cpp $(INCLUDES) -o refined
+	$(CXX) -DDEBUG refined.cpp $(INCLUDES) $(BOOST_MPI_LIBS) -o refined
 
 refined2d: refined2d.cpp $(HEADERS) Makefile
-	$(CXX) -DDEBUG refined2d.cpp $(INCLUDES) -o refined2d
+	$(CXX) -DDEBUG refined2d.cpp $(INCLUDES) $(BOOST_MPI_LIBS) -o refined2d
 
 unrefined2d_all_cells_boost_mpi: unrefined2d.cpp $(HEADERS) Makefile
-	$(CXX) -DDEBUG unrefined2d.cpp $(INCLUDES) -o unrefined2d_all_cells_boost_mpi
+	$(CXX) -DDEBUG unrefined2d.cpp $(INCLUDES) $(BOOST_MPI_LIBS) -o unrefined2d_all_cells_boost_mpi
 
 unrefined2d_all_cells_mpi: unrefined2d.cpp $(HEADERS) Makefile
 	$(CXX) -DDEBUG -DDCCRG_CELL_DATA_SIZE_FROM_USER unrefined2d.cpp $(INCLUDES) -o unrefined2d_all_cells_mpi
@@ -91,7 +92,7 @@ unrefined2d_all_cells_mpi_datatype: unrefined2d.cpp $(HEADERS) Makefile
 	$(CXX) -DDEBUG -DDCCRG_CELL_DATA_SIZE_FROM_USER -DDCCRG_USER_MPI_DATA_TYPE unrefined2d.cpp $(INCLUDES) -o unrefined2d_all_cells_mpi_datatype
 
 unrefined2d_boost_mpi: unrefined2d.cpp $(HEADERS) Makefile
-	$(CXX) -DDEBUG -DDCCRG_SEND_SINGLE_CELLS unrefined2d.cpp $(INCLUDES) -o unrefined2d_boost_mpi
+	$(CXX) -DDEBUG -DDCCRG_SEND_SINGLE_CELLS unrefined2d.cpp $(INCLUDES) $(BOOST_MPI_LIBS) -o unrefined2d_boost_mpi
 
 unrefined2d_mpi: unrefined2d.cpp $(HEADERS) Makefile
 	$(CXX) -DDEBUG -DDCCRG_SEND_SINGLE_CELLS -DDCCRG_CELL_DATA_SIZE_FROM_USER unrefined2d.cpp $(INCLUDES) -o unrefined2d_mpi
@@ -100,13 +101,13 @@ unrefined2d_mpi_datatype: unrefined2d.cpp $(HEADERS) Makefile
 	$(CXX) -DDEBUG -DDCCRG_SEND_SINGLE_CELLS -DDCCRG_CELL_DATA_SIZE_FROM_USER -DDCCRG_USER_MPI_DATA_TYPE unrefined2d.cpp $(INCLUDES) -o unrefined2d_mpi_datatype
 
 refined_scalability3d: refined_scalability3d.cpp $(HEADERS) Makefile
-	$(CXX) refined_scalability3d.cpp $(INCLUDES) -o refined_scalability3d
+	$(CXX) refined_scalability3d.cpp $(INCLUDES) $(BOOST_MPI_LIBS) -o refined_scalability3d
 
 hierarchical_test: hierarchical_test.cpp $(HEADERS) Makefile
-	$(CXX) -DDEBUG hierarchical_test.cpp $(INCLUDES) -o hierarchical_test
+	$(CXX) -DDEBUG hierarchical_test.cpp $(INCLUDES) $(BOOST_MPI_LIBS) -o hierarchical_test
 
 pinned_cells: pinned_cells.cpp $(HEADERS) Makefile
-	$(CXX) -DDEBUG pinned_cells.cpp $(INCLUDES) -o pinned_cells
+	$(CXX) -DDEBUG pinned_cells.cpp $(INCLUDES) $(BOOST_MPI_LIBS) -o pinned_cells
 
 d: data
 data:
