Add a copy constructor for dccrg with support for different UserData.

--- a/tests/constructors/Makefile
+++ b/tests/constructors/Makefile
@@ -2,12 +2,17 @@ FLAGS = -O3 -W -Wall -Wextra -pedantic -std=c++0x
 INCLUDES = -I$$HOME/include -L$$HOME/lib -lboost_mpi -lboost_program_options -lboost_serialization -lzoltan
 CXX = mpic++ $(FLAGS)
 
-all: simple
+PROGRAMS = simple copy
+
+all: $(PROGRAMS)
 
 simple: simple.cpp ../../dccrg.hpp ../../dccrg_constant_geometry.hpp Makefile
-	$(CXX) simple.cpp $(INCLUDES) -o simple
+	$(CXX) $< $(INCLUDES) -o $@
+
+copy: copy.cpp ../../dccrg.hpp ../../dccrg_constant_geometry.hpp Makefile
+	$(CXX) $< $(INCLUDES) -o $@
 
 c: clean
 clean:
-	rm -f simple
+	rm -f $(PROGRAMS)
 
