Change API: use the user cell class' mpi_datatype function for everything.
Now mpi_datatype provides both the address of the buffer and
the MPI_Datatype for dccrg. Additionally it tells how many
datatypes to send (count argument). When sending a single cell
per MPI message these are given to MPI_Isend/Irecv directly.
The mpi_datatype function also now gets basic information
from dccrg, like the cell's id, whether seding or receiving, etc.

Also make write_grid not store user's cell data in temporary buffer.

--- a/tests/advection/Makefile
+++ b/tests/advection/Makefile
@@ -1,9 +1,10 @@
 # use -fno-builtin-sprintf to avoid warning about gnu specific formatting in sprintf by boost lexical_cast
 FLAGS = -O3 -W -Wall -Wextra -pedantic -std=c++0x -fno-builtin-sprintf
+BOOST_MPI_LIBS = -lboost_serialization -lboost_mpi
 INCLUDES = -I$$HOME/include -L$$HOME/lib -lboost_program_options -lzoltan
 CXX = mpic++ $(FLAGS)
 
-PROGRAMS = 2d_mpi 2d_mpi_datatype dc2vtk 2d_debug
+PROGRAMS = 2d_boost_mpi 2d_mpi 2d_boost_mpi_debug 2d_mpi_debug dc2vtk
 
 HEADERS = \
 	cell.hpp \
@@ -14,14 +15,17 @@ HEADERS = \
 
 all: $(PROGRAMS)
 
+2d_boost_mpi: 2d.cpp $(HEADERS) Makefile
+	$(CXX) -DDCCRG_TRANSFER_USING_BOOST_MPI 2d.cpp $(INCLUDES) $(BOOST_MPI_LIBS) -o 2d_boost_mpi
+
 2d_mpi: 2d.cpp $(HEADERS) Makefile
 	$(CXX) 2d.cpp $(INCLUDES) -o 2d_mpi
 
-2d_mpi_datatype: 2d.cpp $(HEADERS) Makefile
-	$(CXX) -DDCCRG_USER_MPI_DATA_TYPE 2d.cpp $(INCLUDES) -o 2d_mpi_datatype
+2d_boost_mpi_debug: 2d.cpp $(HEADERS) Makefile
+	$(CXX) -DDEBUG -DDCCRG_TRANSFER_USING_BOOST_MPI 2d.cpp $(INCLUDES) $(BOOST_MPI_LIBS) -o 2d_boost_mpi_debug
 
-2d_debug: 2d.cpp $(HEADERS) Makefile
-	$(CXX) -DDEBUG 2d.cpp $(INCLUDES) -o 2d_debug
+2d_mpi_debug: 2d.cpp $(HEADERS) Makefile
+	$(CXX) -DDEBUG 2d.cpp $(INCLUDES) -o 2d_mpi_debug
 
 dc2vtk: dc2vtk.cpp ../../dccrg_constant_geometry.hpp Makefile
 	$(CXX) dc2vtk.cpp $(INCLUDES) -o dc2vtk
