--- a/tests/constructors/Makefile
+++ b/tests/constructors/Makefile
@@ -1,8 +1,11 @@
 FLAGS = -O3 -W -Wall -Wextra -pedantic -std=c++0x
 INCLUDES = -I$$HOME/include -L$$HOME/lib -lboost_mpi -lboost_program_options -lboost_serialization -lzoltan
 CXX = mpic++ $(FLAGS)
+MPIRUN = mpirun -np 2
+RUN =
 
 PROGRAMS = simple copy
+TEST_PROGRAMS = copy
 
 all: $(PROGRAMS)
 
@@ -15,4 +18,9 @@ copy: copy.cpp ../../dccrg.hpp ../../dccrg_constant_geometry.hpp Makefile
 c: clean
 clean:
 	rm -f $(PROGRAMS)
+
+t: test
+test: $(TEST_PROGRAMS)
+	@for i in $(TEST_PROGRAMS); do echo -n "RUN $$i... " && $(RUN) ./$$i; done
+	@for i in $(TEST_PROGRAMS); do echo -n "MPIRUN $$i... " && $(MPIRUN) $$i; done
 
