--- a/tests/load_balancing/Makefile
+++ b/tests/load_balancing/Makefile
@@ -7,7 +7,7 @@ PROGRAMS = load_balancing_test multi_stage_load_balancing
 all: $(PROGRAMS)
 
 load_balancing_test: load_balancing_test.cpp ../../dccrg.hpp ../../dccrg_constant_geometry.hpp Makefile
-	$(CXX) $< $(INCLUDES) -o $@
+	$(CXX) $< -DDCCRG_TRANSFER_USING_BOOST_MPI $(INCLUDES) -o $@
 
 multi_stage_load_balancing: multi_stage_load_balancing.cpp ../../dccrg.hpp ../../dccrg_constant_geometry.hpp Makefile
 	$(CXX) $< $(INCLUDES) -o $@
