--- a/tests/loading/Makefile
+++ b/tests/loading/Makefile
@@ -5,7 +5,7 @@ CXX = mpic++ $(FLAGS)
 all: load
 
 load: load.cpp ../../dccrg.hpp ../../dccrg_index.hpp ../../dccrg_constant_geometry.hpp Makefile
-	$(CXX) load.cpp $(INCLUDES) -o load
+	$(CXX) -DDCCRG_TRANSFER_USING_BOOST_MPI load.cpp $(INCLUDES) -o load
 
 d: data
 data:
