--- a/tests/refine/Makefile
+++ b/tests/refine/Makefile
@@ -5,13 +5,13 @@ CXX = mpic++ $(FLAGS)
 all: refine_simple unrefine_simple scalability
 
 refine_simple: refine_simple.cpp ../../dccrg.hpp Makefile
-	$(CXX) refine_simple.cpp $(INCLUDES) -o refine_simple
+	$(CXX) -DDCCRG_TRANSFER_USING_BOOST_MPI refine_simple.cpp $(INCLUDES) -o refine_simple
 
 unrefine_simple: unrefine_simple.cpp ../../dccrg.hpp Makefile
-	$(CXX) unrefine_simple.cpp $(INCLUDES) -o unrefine_simple
+	$(CXX) -DDCCRG_TRANSFER_USING_BOOST_MPI unrefine_simple.cpp $(INCLUDES) -o unrefine_simple
 
 scalability: scalability.cpp ../../dccrg.hpp Makefile
-	$(CXX) scalability.cpp $(INCLUDES) -o scalability
+	$(CXX) -DDCCRG_TRANSFER_USING_BOOST_MPI scalability.cpp $(INCLUDES) -o scalability
 
 c: clean
 clean:
