--- a/tests/variable_data_size/Makefile
+++ b/tests/variable_data_size/Makefile
@@ -5,10 +5,10 @@ CXX = mpic++ $(FLAGS)
 all: variable_data_size variable_neighbour_data
 
 variable_data_size: variable_data_size.cpp ../../dccrg.hpp ../../dccrg_arbitrary_geometry.hpp Makefile
-	$(CXX) variable_data_size.cpp $(INCLUDES) -o variable_data_size
+	$(CXX) -DDCCRG_TRANSFER_USING_BOOST_MPI variable_data_size.cpp $(INCLUDES) -o variable_data_size
 
 variable_neighbour_data: variable_neighbour_data.cpp ../../dccrg.hpp ../../dccrg_arbitrary_geometry.hpp Makefile
-	$(CXX) variable_neighbour_data.cpp $(INCLUDES) -o variable_neighbour_data
+	$(CXX) -DDCCRG_TRANSFER_USING_BOOST_MPI variable_neighbour_data.cpp $(INCLUDES) -o variable_neighbour_data
 
 c: clean
 clean:
