Rename geometry classes.
Rename constant to cartesian and arbitrary to stretched cartesian.
Also fix a bug in variable_neighbour_data test.

--- a/tests/geometry/Makefile
+++ b/tests/geometry/Makefile
@@ -2,14 +2,14 @@ FLAGS = -O3 -W -Wall -Wextra -pedantic -std=c++0x
 INCLUDES = -I$$HOME/include -L$$HOME/lib -lboost_mpi -lboost_serialization -lzoltan
 CXX = g++ $(FLAGS)
 
-all: constant_grid_speed arbitrary_stretch_speed
+all: cartesian_grid_speed stretched_cartesian_grid_speed
 
-constant_grid_speed: constant_grid_speed.cpp ../../dccrg_constant_geometry.hpp Makefile
-	$(CXX) constant_grid_speed.cpp $(INCLUDES) -o constant_grid_speed
+cartesian_grid_speed: cartesian_grid_speed.cpp ../../dccrg_cartesian_geometry.hpp Makefile
+	$(CXX) cartesian_grid_speed.cpp $(INCLUDES) -o cartesian_grid_speed
 
-arbitrary_stretch_speed: arbitrary_stretch_speed.cpp ../../dccrg_arbitrary_geometry.hpp Makefile
-	$(CXX) arbitrary_stretch_speed.cpp $(INCLUDES) -o arbitrary_stretch_speed
+stretched_cartesian_grid_speed: stretched_cartesian_grid_speed.cpp ../../dccrg_stretched_cartesian_geometry.hpp Makefile
+	$(CXX) stretched_cartesian_grid_speed.cpp $(INCLUDES) -o stretched_cartesian_grid_speed
 
 c: clean
 clean:
-	rm -f constant_grid_speed arbitrary_stretch_speed
+	rm -f cartesian_grid_speed stretched_cartesian_grid_speed
