Add a 1d poisson test using a stretched grid.

--- a/tests/poisson/Makefile
+++ b/tests/poisson/Makefile
@@ -7,13 +7,14 @@ LIBS = -lboost_program_options -lzoltan
 BOOST_MPI_LIBS = -lboost_serialization -lboost_mpi
 MPICXX = mpic++ $(FLAGS)
 CXX = g++ $(FLAGS)
-MPIRUN = mpirun -np 2
+MPIRUN = mpirun -n $(PROCS)
 RUN =
 
 PROGRAMS = \
 	reference_poisson_example \
 	reference_poisson_test \
-	poisson1d
+	poisson1d \
+	poisson1d_stretched
 
 HEADERS = \
 	../../dccrg.hpp \
@@ -26,6 +27,9 @@ HEADERS = \
 
 all: $(PROGRAMS)
 
+poisson1d_stretched: poisson1d_stretched.cpp $(SOURCES) $(HEADERS) Makefile
+	@echo "MPICXX  $@" && $(MPICXX) $(FLAGS) $(INCLUDES) $< $(LIBS) $(BOOST_MPI_LIBS) -o $@
+
 poisson1d: poisson1d.cpp $(SOURCES) $(HEADERS) Makefile
 	@echo "MPICXX  $@" && $(MPICXX) $(FLAGS) $(INCLUDES) $< $(LIBS) $(BOOST_MPI_LIBS) -o $@
 
@@ -36,15 +40,21 @@ reference_poisson_test: reference_poisson_test.cpp reference_poisson_solve.hpp M
 	@echo "CXX $@" && $(CXX) $(FLAGS) $(INCLUDES) $< $(LIBS) -o $@
 
 t: test
-test: reference_poisson_test poisson1d
+test: reference_poisson_test poisson1d poisson1d_stretched
 	@echo -n "Testing reference poisson solver... " && ./reference_poisson_test
-	@echo -n "Testing poisson solver using 1 process... " && ./poisson1d
+	@echo -n "Testing poisson solver in serial... " && ./poisson1d
+	@echo -n "Testing poisson solver on a stretched grid in serial... " && ./poisson1d_stretched
 
 pt: parallel-test
-parallel-test: poisson1d
-	@echo -n "Testing poisson solver using $(PROCS) processes... " && mpirun -n $(PROCS) ./poisson1d
+parallel-test: poisson1d poisson1d_stretched
+	@echo -n "Testing poisson solver using $(PROCS) processes... " && $(MPIRUN) ./poisson1d
+	@echo -n "Testing stretched poisson solver using $(PROCS) processes... " && $(MPIRUN) ./poisson1d_stretched
+
+d: data
+data:
+	rm -f poisson1d_stretched*gnuplot poisson1d_stretched*svg
 
 c: clean
-clean:
+clean: data
 	rm -f $(PROGRAMS)
 
