Add a 2d poisson test and adaptive stop_residual to solver.

--- a/tests/poisson/Makefile
+++ b/tests/poisson/Makefile
@@ -14,7 +14,14 @@ PROGRAMS = \
 	reference_poisson_example \
 	reference_poisson_test \
 	poisson1d \
-	poisson1d_stretched
+	poisson1d_stretched \
+	poisson2d
+
+TEST_PROGRAMS = \
+	reference_poisson_test \
+	poisson1d \
+	poisson1d_stretched \
+	poisson2d
 
 HEADERS = \
 	../../dccrg.hpp \
@@ -28,10 +35,13 @@ HEADERS = \
 all: $(PROGRAMS)
 
 poisson1d_stretched: poisson1d_stretched.cpp $(SOURCES) $(HEADERS) Makefile
-	@echo "MPICXX  $@" && $(MPICXX) $(FLAGS) $(INCLUDES) $< $(LIBS) $(BOOST_MPI_LIBS) -o $@
+	@echo "MPICXX $@" && $(MPICXX) $(FLAGS) $(INCLUDES) $< $(LIBS) $(BOOST_MPI_LIBS) -o $@
 
 poisson1d: poisson1d.cpp $(SOURCES) $(HEADERS) Makefile
-	@echo "MPICXX  $@" && $(MPICXX) $(FLAGS) $(INCLUDES) $< $(LIBS) $(BOOST_MPI_LIBS) -o $@
+	@echo "MPICXX $@" && $(MPICXX) $(FLAGS) $(INCLUDES) $< $(LIBS) $(BOOST_MPI_LIBS) -o $@
+
+poisson2d: poisson2d.cpp $(SOURCES) $(HEADERS) Makefile
+	@echo "MPICXX $@" && $(MPICXX) $(FLAGS) $(INCLUDES) $< $(LIBS) $(BOOST_MPI_LIBS) -o $@
 
 reference_poisson_example: reference_poisson_example.cpp reference_poisson_solve.hpp Makefile
 	@echo "CXX $@" && $(CXX) $(FLAGS) $(INCLUDES) $< $(LIBS) -o $@
@@ -39,16 +49,21 @@ reference_poisson_example: reference_poisson_example.cpp reference_poisson_solve
 reference_poisson_test: reference_poisson_test.cpp reference_poisson_solve.hpp Makefile
 	@echo "CXX $@" && $(CXX) $(FLAGS) $(INCLUDES) $< $(LIBS) -o $@
 
+plots:
+	@echo "Plotting 1d stretched poisson test results with gnuplot... " && for f in *.gnuplot; do gnuplot $$f; done
+
 t: test
-test: reference_poisson_test poisson1d poisson1d_stretched
+test: $(TEST_PROGRAMS)
 	@echo -n "Testing reference poisson solver... " && ./reference_poisson_test
-	@echo -n "Testing poisson solver in serial... " && ./poisson1d
-	@echo -n "Testing poisson solver on a stretched grid in serial... " && ./poisson1d_stretched
+	@echo -n "Testing 1d poisson solver in serial... " && ./poisson1d
+	@echo -n "Testing 1d poisson solver on a stretched grid in serial... " && ./poisson1d_stretched
+	@echo -n "Testing 2d poisson solver in serial... " && ./poisson2d
 
 pt: parallel-test
-parallel-test: poisson1d poisson1d_stretched
-	@echo -n "Testing poisson solver using $(PROCS) processes... " && $(MPIRUN) ./poisson1d
-	@echo -n "Testing stretched poisson solver using $(PROCS) processes... " && $(MPIRUN) ./poisson1d_stretched
+parallel-test: $(TEST_PROGRAMS)
+	@echo -n "Testing 1d poisson solver using $(PROCS) processes... " && $(MPIRUN) ./poisson1d
+	@echo -n "Testing 1d stretched poisson solver using $(PROCS) processes... " && $(MPIRUN) ./poisson1d_stretched
+	@echo -n "Testing 2d poisson solver using $(PROCS) processes... " && $(MPIRUN) ./poisson2d
 
 d: data
 data:
