--- a/tests/advection/Makefile
+++ b/tests/advection/Makefile
@@ -1,7 +1,7 @@
 # use -fno-builtin-sprintf to avoid warning about gnu specific formatting in sprintf by boost lexical_cast
 FLAGS = -O3 -W -Wall -Wextra -pedantic -std=c++0x -fno-builtin-sprintf
 BOOST_MPI_LIBS = -lboost_serialization -lboost_mpi
-INCLUDES = -I$$HOME/include -L$$HOME/lib -lboost_program_options -lzoltan
+INCLUDES = -I../.. -I$$HOME/include -L$$HOME/lib -lboost_program_options -lzoltan
 CXX = mpic++ $(FLAGS)
 
 PROGRAMS = 2d_boost_mpi 2d_mpi 2d_boost_mpi_debug 2d_mpi_debug dc2vtk
@@ -12,7 +12,10 @@ HEADERS = \
 	../../dccrg_index.hpp \
 	../../dccrg_cartesian_geometry.hpp \
 	../../dccrg_mpi_support.hpp \
-	grid_support.hpp
+	adapter.hpp \
+	initialize.hpp \
+	save.hpp \
+	solve.hpp
 
 all: $(PROGRAMS)
 
