Enable AMR support in poisson_solve.hpp and add a 1d test for it.

--- a/tests/poisson/Makefile
+++ b/tests/poisson/Makefile
@@ -14,12 +14,14 @@ PROGRAMS = \
 	reference_poisson_example \
 	reference_poisson_test \
 	poisson1d \
+	poisson1d_amr \
 	poisson1d_stretched \
 	poisson2d
 
 TEST_PROGRAMS = \
 	reference_poisson_test \
 	poisson1d \
+	poisson1d_amr \
 	poisson1d_stretched \
 	poisson2d
 
@@ -33,13 +35,16 @@ HEADERS = \
 
 all: $(PROGRAMS)
 
-poisson1d_stretched: poisson1d_stretched.cpp $(SOURCES) $(HEADERS) Makefile
+poisson1d_amr: poisson1d_amr.cpp $(HEADERS) Makefile
 	@echo "MPICXX $@" && $(MPICXX) $(FLAGS) $(INCLUDES) $< $(LIBS) $(BOOST_MPI_LIBS) -o $@
 
-poisson1d: poisson1d.cpp $(SOURCES) $(HEADERS) Makefile
+poisson1d_stretched: poisson1d_stretched.cpp $(HEADERS) Makefile
 	@echo "MPICXX $@" && $(MPICXX) $(FLAGS) $(INCLUDES) $< $(LIBS) $(BOOST_MPI_LIBS) -o $@
 
-poisson2d: poisson2d.cpp $(SOURCES) $(HEADERS) Makefile
+poisson1d: poisson1d.cpp $(HEADERS) Makefile
+	@echo "MPICXX $@" && $(MPICXX) $(FLAGS) $(INCLUDES) $< $(LIBS) $(BOOST_MPI_LIBS) -o $@
+
+poisson2d: poisson2d.cpp $(HEADERS) Makefile
 	@echo "MPICXX $@" && $(MPICXX) $(FLAGS) $(INCLUDES) $< $(LIBS) $(BOOST_MPI_LIBS) -o $@
 
 reference_poisson_example: reference_poisson_example.cpp reference_poisson_solve.hpp Makefile
@@ -55,12 +60,14 @@ t: test
 test: $(TEST_PROGRAMS)
 	@echo -n "Testing reference poisson solver... " && ./reference_poisson_test
 	@echo -n "Testing 1d poisson solver in serial... " && ./poisson1d
+	@echo -n "Testing 1d poisson solver on a refined grid in serial... " && ./poisson1d_amr
 	@echo -n "Testing 1d poisson solver on a stretched grid in serial... " && ./poisson1d_stretched
 	@echo -n "Testing 2d poisson solver in serial... " && ./poisson2d
 
 pt: parallel-test
 parallel-test: $(TEST_PROGRAMS)
 	@echo -n "Testing 1d poisson solver using $(PROCS) processes... " && $(MPIRUN) ./poisson1d
+	@echo -n "Testing 1d amr poisson solver using $(PROCS) processes... " && $(MPIRUN) ./poisson1d_amr
 	@echo -n "Testing 1d stretched poisson solver using $(PROCS) processes... " && $(MPIRUN) ./poisson1d_stretched
 	@echo -n "Testing 2d poisson solver using $(PROCS) processes... " && $(MPIRUN) ./poisson2d
 
