--- a/tests/get_cells/Makefile
+++ b/tests/get_cells/Makefile
@@ -7,8 +7,11 @@ PROGRAMS = test1
 
 HEADERS = \
 	../../dccrg.hpp \
-	../../dccrg_index.hpp \
-	../../dccrg_cartesian_geometry.hpp
+	../../dccrg_cartesian_geometry.hpp \
+	../../dccrg_length.hpp \
+	../../dccrg_mapping.hpp \
+	../../dccrg_topology.hpp \
+	../../dccrg_types.hpp
 
 all: $(PROGRAMS)
 
