Continue modularization and remove named dimensions from arguments and functions names.

--- a/tests/refine/Makefile
+++ b/tests/refine/Makefile
@@ -15,4 +15,4 @@ scalability: scalability.cpp ../../dccrg.hpp Makefile
 
 c: clean
 clean:
-	rm -f refine_simple unrefine_simple scalability
+	rm -f refine_simple unrefine_simple scalability *.visit *.vtk
